--- a/2000111222_홍길동_PA2/2000111222_홍길동_PA2.vcxproj
+++ b/2000111222_홍길동_PA2/2000111222_홍길동_PA2.vcxproj
@@ -69,11 +69,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Box.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Box.h" />
     <ClInclude Include="Face.h" />
     <ClInclude Include="Init.h" />
     <ClInclude Include="Matrix.h" />
