--- a/2000111222_홍길동_PA2/2000111222_홍길동_PA2.vcxproj.filters
+++ b/2000111222_홍길동_PA2/2000111222_홍길동_PA2.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Vector.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Box.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Face.h">
@@ -42,6 +45,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Vertex.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Box.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
