--- a/2000111222_홍길동_PA2/2000111222_홍길동_PA2.vcxproj.filters
+++ b/2000111222_홍길동_PA2/2000111222_홍길동_PA2.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Box.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
